# trackademic

./: .gitignore  README.md  api-scope.json  new-publish-profile.xml
.github/workflows/: azure-functions.yml  azure-static-web-apps-blue-tree-09b213203.yml  ci.yml
azure-functions/: README.md  auth.py  database.py  host.json  local.settings.json  models.py  requirements.txt
azure-functions/api_health/: __init__.py
azure-functions/api_meetings/: __init__.py  function.json
backend/: .env  .env.production  README.md  auth.py  create_db.py  database.py  main.py  models.py  requirements.txt  schemas.py  seed_data.py  start.sh  startup.sh  test_auth.py  trackademic.db  trackademic.db.backup
frontend/: .env  .env.production  package-lock.json  package.json  swa-cli.config.json  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/api/: .funcignore  auth.py  database.py  host.json  local.settings.json  pyproject.toml  requirements.txt
frontend/api/dbtest/: __init__.py  function.json
frontend/api/debug/: __init__.py  function.json
frontend/api/health/: __init__.py  function.json
frontend/api/meetings/: __init__.py
frontend/api/meetings-simple/: __init__.py  function.json
frontend/public/: staticwebapp.config.json
frontend/src/: App.js  App.tsx  authConfig.ts  main.js  main.tsx
frontend/src/auth/: auth-config.ts
frontend/src/components/: Cards.tsx  Footer.tsx  Hero.tsx  Navbar.tsx
mobile/: README.md  pubspec.yaml
mobile/lib/: azure_config.dart  dashboard_page.dart  main.dart
mobile/test/: widget_test.dart
(+55 files in other folders)
